--- a/Bento Grid/estilos/mobile.css
+++ b/Bento Grid/estilos/mobile.css
@@ -44,6 +44,7 @@ p {
 
 .container {
     margin: 20px 10px;
+    padding: 30px;
     display: grid;
     grid-template: auto / 1fr;
     gap: 32px;
@@ -51,7 +52,7 @@ p {
 }
 
 .box {
-    width: 100%;
+    
     border-radius: 10px;
 }
 
@@ -93,6 +94,10 @@ p {
             border-radius: 10px;
         }
 
+        .item2 > h2 {
+            text-align: start;
+        }
+
     .item3 {
         background-color: var(--Yellow-500);
         padding: 16px 16px 0px 16px;
@@ -105,27 +110,94 @@ p {
             transform: translateY(10%);
         }
 
+        .item3 > h2 {
+            text-align: start;
+        }
+
     .item4 {
         background-color: var(--Purple-100);
-        padding: 32px;
+        padding: 32px 15px;
     }
+    
+        .item4 > img {
+            display: block;
+            width: 100%;
+            margin: 24px 0px;
+        }
+
+        /* chegar margin e stretch img */
+        .item4 > p, h2 {
+            text-align: center;
+        }
 
     .item5 {
         background-color: var(--Purple-500);
-        padding: 24px;
+        padding: 24px 15px;
+        color: var(--White);
     }
+
+        .item5 > img {
+            display: block;
+            margin: auto;
+            width: 70%;
+        }
+
+        .item5 > h2 {
+            margin-top: 40px;
+            font-size: 32px;
+            padding: 0px 40px;
+        }
 
     .item6 {
         background-color: var(--White);
         padding: 24px;
     }
 
+        .item6 > img {
+            margin-top: 24px;
+            width: 65%;
+        }
+
+        .item6 > h2 {
+            text-align: start;
+            font-size: 46px;
+        }
+
+        .item6 > p {
+            padding-top: 10px;
+        }
+
     .item7 {
         background-color: var(--Yellow-100);
         padding: 32px;
     }
 
+        .item7 > img {
+            margin-top: 24px;
+            width: 65%;
+        }
+
+        .item7 > h2 {
+            text-align: start;
+            font-size: 30px;
+        }
+
+        .texto-roxo {
+            color: var(--Purple-500);
+            font-style: italic;
+        }
+
     .item8 {
         background-color: var(--Yellow-500);
         padding: 24px;
     }
+
+        .item8 > img {
+            margin-top: 24px;
+            width: 75%;
+        }
+
+        .item8 > h2 {
+            text-align: start;
+            font-size: 30px;
+        }
