--- a/Bento Grid/estilos/media-query.css
+++ b/Bento Grid/estilos/media-query.css
@@ -1,16 +1,80 @@
 @media screen and (min-width: 480px) and (max-width: 992px) {
 
-    body {
-        
-    }
-
     .container {
         grid-template: auto / 1fr 1fr;
         padding: 30px;
     }
 
     .item1 {
+        
         grid-area: 1 / 1 / 2 / 3;
         width: 100%;
+
+        h2 {
+            max-width: 361px;
+            margin: auto;
+        }
     }
+
+    .item2 {
+        display: grid;
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .item3 {
+        display: grid;
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    .item4 {
+        display: grid;
+        justify-items: center;
+        grid-area: 3 / 1 / 4 / 3;
+        width: 100%;
+
+        img {
+            width: 250px;  
+        }
+
+        p {
+            max-width: 360px;
+        }
+        
+    }
+
+    .item5 {
+        grid-area: 4 / 1 / 5 / 3;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        img {
+            min-width: 110px;
+            max-width: 160px;
+            margin: 0px 40px;
+        }
+
+        h2 {
+            max-width: 200px;
+            text-align: start;
+            align-self: center;
+            margin: 0px;
+            padding: 0px;
+        }
+    }
+
+    .item6 {
+        grid-area: 5 / 1 / 6 / 3;
+        width: 100%
+    }
+
+    .item7 {
+        grid-area: 6 / 1 / 7 / 2;
+    }
+
+    .item8 {
+        grid-area: 6 / 2 / 7 / 3;
+    }
+
 }
