--- a/Bento Grid/estilos/media-query.css
+++ b/Bento Grid/estilos/media-query.css
@@ -1,5 +1,13 @@
 @media screen and (min-width: 480px) and (max-width: 992px) {
 
+
+    p {
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 111%;
+        letter-spacing: 0px;
+    }
+
     .container {
         grid-template: auto / 1fr 1fr;
         padding: 30px;
@@ -19,6 +27,11 @@
     .item2 {
         display: grid;
         grid-area: 2 / 1 / 3 / 2;
+
+        h2 {
+            
+            align-self: flex-end;
+        }
     }
 
     .item3 {
@@ -66,11 +79,24 @@
 
     .item6 {
         grid-area: 5 / 1 / 6 / 3;
-        width: 100%
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        img {
+            max-width: 150px;
+            margin-top: 0px;
+            align-self: center;
+        }
+
     }
 
     .item7 {
         grid-area: 6 / 1 / 7 / 2;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
     }
 
     .item8 {
